fix(logs): err logs added